--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   fluentui_system_icons: ^1.1.270
   calendar_view: ^1.4.0
   flex_color_scheme: ^8.1.0
+  flutter_form_builder: ^9.7.0
+  form_builder_validators: ^11.1.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
