--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   flutter_form_builder: ^9.7.0
   form_builder_validators: ^11.1.1
   intl: ^0.19.0
+  reorderables: ^0.6.0
+  flutter_hooks: ^0.20.5
 
 dev_dependencies:
   flutter_test:
