--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,6 @@ dependencies:
   touchable_opacity: ^1.2.0
   watch_it: ^1.6.2
   modal_bottom_sheet: ^3.0.0
-  fquery: ^1.5.0-beta.1
   font_awesome_flutter: ^10.8.0
   dio_cache_interceptor: ^3.5.1
   dio: ^5.7.0
@@ -59,6 +58,8 @@ dependencies:
   intl: ^0.19.0
   reorderables: ^0.6.0
   flutter_hooks: ^0.20.5
+  cached_query_flutter: ^2.6.0
+  cached_storage: ^2.0.14
 
 dev_dependencies:
   flutter_test:
