--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   cached_query_flutter: ^2.6.0
   cached_storage: ^2.0.14
   flutter_slidable: ^3.1.2
+  pie_menu: ^3.2.7
+  gaimon: ^1.4.0
 
 dev_dependencies:
   flutter_test:
